# PortfolioMatveiPisarev

./: .gitignore
backend/: .env  .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/src/: .pre-commit-config.yaml  main.py
backend/src/db/: utils.py
backend/src/portfolio/: settings.py
frontend/: package-lock.json
frontend/app/: page.tsx
